# gust

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  GUST Authentifizierung HMAC ECDSA.md  How_to_install_on_Linux.md  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  export_gust_sources.ps1  gateway.json.example  gateway.json.schema.json  getting_started.md  gust.py  gust_audio.py  gust_audio_diag.py  gust_backlog.md  gust_beacon.py  gust_connector_konzept.md  gust_decode.py  gust_dependency_matrix.html  gust_eventbus.py  gust_fec.py  gust_frame.py  gust_gateway.py  gust_hackrf.py  gust_hackrf_diag.py  gust_iq_rx.py  gust_keygen.py  gust_knowledge.md  gust_ldpc.py  gust_meshcore_bridge.py  gust_modulator.py  gust_msg_simulator.py  gust_rx.py  gust_skripte.md  gust_soapy_tx.py  gust_spec.md  (+17 more)
ldpc_planung/: cc_ldpc_etappe1_fec_interface.md  cc_ldpc_etappe2_implementation.md  cc_ldpc_etappe2b_loopback.md  cc_ldpc_etappe3_integration.md  cc_ldpc_etappe4_stresstest.md  cc_ldpc_etappe4_stresstest_isoliert.md  ldpc_blocklen_eval.py  ldpc_blocklen_eval_ergebnis.md
locales/: de.json  en.json
systemd/: gust.service
udev/: 99-gust-sdr.rules
